Update version and description in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = subscrypt
-version = 0.0.0
+version = 0.0.2
 description = Python client for Subscrypt
-long_description = Python client for Subscrypt
+long_description = file: README.md
 url = https://github.com/oxydev/SubsCrypt-python-package
 author = Ali Ahmadi
 author_email = ali.ahmadi.star27@gmail.com
