--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ jobs:
           python-version: '3.x'
       - name: Install pypa/build
         run: python -m pip install build --user
+      - name: Install requirements
+        run: python -m pip install requests
       - name: Build
         run: python -m build --sdist --wheel --outdir dist/
       - name: Test
