--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = subscrypt
-version = 0.0.2
+version = 0.0.3
 description = Python client for Subscrypt
 long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/oxydev/SubsCrypt-python-package
 author = Ali Ahmadi
 author_email = ali.ahmadi.star27@gmail.com
